# log_lib

./: CMakeLists.txt  README.md  constants.h  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile
src/: App.cpp  App.h  CMakeLists.txt
src/Logger/: CMakeLists.txt
src/Logger/include/: log_event.h  logger.h
src/Logger/src/: log_event.cpp  logger.cpp
src/Queue/: CMakeLists.txt
src/Queue/include/: blocking_queue.h  formatter.h  worker_thread.h
src/Queue/src/: blocking_queue.cpp  formatter.cpp  worker_thread.cpp
src/Sink/: CMakeLists.txt
src/Sink/include/: console_sink.h  constants.h  file_sink.h  sink_factory.h  sink_interface.h  sink_manager.h
src/Sink/src/: console_sink.cpp  file_sink.cpp  sink_interface.cpp  sink_manager.cpp
src/utils/: CMakeLists.txt
src/utils/include/: json_parser.h
tests/: CMakeLists.txt  formatter_test.cpp  log_event_test.cpp  logger_test.cpp  parser_test.cpp  queue_test.cpp  sink_factory_test.cpp  sink_test.cpp
utils/: CMakeLists.txt  util.cpp  util.h
